# learnbazel

rules_graphviz/: BUILD  MODULE.bazel  extension.bzl  graphviz.bzl  repo.bzl
test_project/: BUILD  MODULE.bazel  example.dot
