module(name = "test_project", version = "1.0.0")

bazel_dep(name = "rules_graphviz", version = "1.0.0")

local_path_override(module_name = "rules_graphviz", path = "../rules_graphviz")

graphviz = use_extension("@rules_graphviz//:extension.bzl", "graphviz")


use_repo(graphviz, "the_graphviz_repo")

# can this be something more specific?
register_toolchains("@the_graphviz_repo//:all")